css/styles.css
/* GLOBAL STYLES */
* {
	font-family: Roboto, sans-serif;
	width: 100%;
	margin: 0;
	padding: 0;
}


/* SECTION STYLES */
.robot {
	font-family: Roboto, sans-serif;
}

.orange {
	color: #ff8c00;
}

.center {
	text-align: center;
}

.left {
  padding-left: 18px;
  padding-right: 25%;
  margin-right: 15%;
}

.right {
  padding-right: 18px;
  padding-left: 25%;
  margin-left: 15%;
}

.title {
  position: absolute;
  top: 60%;
  width: 75%;
  text-align: left;
  background-color: #8e4444;
  color: #fff;
  padding: 20px 20px 20px 40px;
	font-size: 1.3rem;
	margin: 0px -15px;
	box-shadow: 10px 10px 5px black;
}

header {
	background-color: #2a60a0;
	padding: 10px;
	z-index: 1;
	display: inline-flex;
	width: 100%;
}

.nav-left {
	width: 50%;
	height: 50px;
	display: inline-flex;
}

.nav-right {
	width: 50%;
	text-align: right;
	padding: 10px 40px 0px 0px;
}

.main {
	background-image: url("../img/main2.jpg");
	position: relative;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	padding-top: 125px;
	height: 100vh;
}

.services {
	background-color: #ccc;
	min-height: 1000px;
	padding-top: 50px;
}

.service-list {
	display: inline-flex;
	margin: 0 auto;
}

.service-item {
	width: 33%;
	margin: 10px;
}

.service-image-bg {
	background-color: #fff;
	border-radius: 50%;
	width: 50%;
	height: auto;
	margin: 0 auto;
}

.service-description {
	text-align: center;
	width: 100%;
	margin: 25px 0px;
}


/* ELEMENT STYLES */
h1 {
	font-family: Zeyada, Roboto, sans-serif;
	font-size: 3rem;
}

h2 {
	font-family: Roboto, sans-serif;
	font-size: 1.7rem;
}

img.nav-logo {
	height: 100%;
	width: auto;
}

a.nav-link {
	text-decoration: none;
	color: #fff;
	font-weight: bold;
	font-size: 1.25rem;
	text-align: right;
	padding: 0px 15px;
}

img.service-image {
	width: 50%;
	height: auto;
	margin: 25%;
}

